grammar.js
        program: $ => $._statements,

        //
        // Statements
        //
        _statements: $ => repeat1(seq($._statement, choice(";", /\n/))),

        _loop_statement: $ =>
            choice(
                $.for_in_statement,
                $.while_statement,
                $.repeat_while_statement
            ),

        for_in_statement: $ =>
            seq(
                "for",
                optional("case"),
                field("variable", $._pattern),
                "in",
                field("collection", $.expression),
                optional($.where_clause),
                $._code_block
            ),

        while_statement: $ =>
            seq(
                "while",
                commaSep1($._condition),
                $._code_block
            ),

        _condition: $ =>
            choice(
                field("expression_condition", $.expression),
                field("availability_condition", $.availability_condition),
                field("case_condition", $.case_condition),
                field("optional_binding_condition", $.optional_binding_condition)
            ),

        optional_binding_condition: $ =>
            seq(
                choice("let", "var"),
                $._pattern,
                $.initializer
            ),

        repeat_while_statement: $ =>
            seq("repeat", $._code_block, "while", field("expression_condition", $.expression)),

        if_statement: $ =>
            seq("if", commaSep1($._condition), $._code_block, field("else_clause", optional($.else_clause))),

        else_clause: $ =>
            choice(
                   seq("else", $._code_block),
                   seq("else", field("if_statement", $.if_statement))
            ),

        guard_statement: $ =>
            seq("guard", commaSep1($._condition), "else", $._code_block),

        switch_statement: $ =>
            seq(
                "switch",
                field("subject", $.expression),
                "{",
                repeat(field("cases", $.switch_case)),
                "}"
            ),

        switch_case: $ =>
            choice(
                seq(field("case", $.case_label), $._statements),
                seq(field("default", $.default_label), $._statements),
                $.conditional_switch_case
            ),

        case_label: $ =>
            seq(repeat($.attribute), "case", commaSep1(field("items", $.case_item)), ":"),

        case_item: $ => seq($._pattern, optional($.where_clause)),

        default_label: $ => seq(repeat($.attribute), "default", ":"),

        labeled_statement: $ =>
            seq(
                $._label_name,
                ":",
                field("statement",
                      choice($._loop_statement,
                             $.if_statement,
                             $.switch_statement,
                             $.do_statement
                      )
                )
            ),

        _label_name: $ => $.identifier,

        break_statement: $ => seq("break", optional($._label_name)),

        continue_statement: $ => seq("continue", optional($._label_name)),

        fallthrough_statement: $ => "fallthrough",

        return_statement: $ => seq("return", optional($.expression)),

        throw_statement: $ => seq("throw", field("expression", $.expression)),

        defer_statement: $ => seq("defer", field("block", $._code_block)),

        do_statement: $ => seq("do", $._code_block, repeat(field("catch_clauses", $.catch_clause))),

        catch_clause: $ =>
            seq("catch", optional(commaSep($.catch_pattern)), $._code_block),

        catch_pattern: $ => seq($._pattern, optional($.where_clause)),

        conditional_compilation_block: $ =>
            seq(
                "#if",
                field("condition", $.compilation_condition),
                field("success", optional($._statements)),
                repeat(field("alternatives", $.elseif_directive_clause)),
                field("failure", optional($.else_directive_clause)),
                "#endif"
            ),

        elseif_directive_clause: $ =>
            seq(
                "#elseif",
                field("condition", $.compilation_condition),
                field("statements", optional($._statements))
            ),

        else_directive_clause: $ =>
            seq("#else", field("statements", optional($._statements))),

        compilation_condition: $ =>
            prec.left(choice(
                $._platform_condition,
                $.identifier,
                $.boolean_literal,
                seq("(", $.compilation_condition, ")"),
                seq("!", $.compilation_condition),
                seq($.compilation_condition, "&&", $.compilation_condition),
                seq($.compilation_condition, "||", $.compilation_condition)
            )),

        _platform_condition: $ =>
            choice(
                seq("os", "(", $._operating_system, ")"),
                seq("arch", "(", $._architecture, ")"),
                seq("swift", "(", ">=", $._swift_version, ")"),
                seq("swift", "(", "<", $._swift_version, ")"),
                seq("compiler", "(", ">=", $._swift_version, ")"),
                seq("compiler", "(", "<", $._swift_version, ")"),
                seq("canImport", "(", alias($.identifier, $.module_name), ")"),
                seq("targetEnvironment", "(", $._environment, ")")
            ),

        availability_condition: $ =>
            seq("#available", "(", commaSep1($.availability_argument), ")"),

        availability_argument: $ =>
            choice(seq($._platform_name, alias($.number, $.platform_version)), "*"),

        _platform_name: $ =>
            choice(
                "iOS",
                "iOSApplicationExtension",
                "macOS",
                "macOSApplicationExtension",
                "macCatalyst",
                "macCatalystApplicationExtension",
                "watchOS",
                "tvOS"
            ),

        //
        // Expression
        //
        expression: $ =>
            seq(
                optional($._try_operator),
                choice(
                    seq(
                        optional(alias($.operator, $.prefix_operator)),
                        field("postfix_expression", $._postfix_expression)
                    ),
                    field("in_out_expression", $.in_out_expression),
                    field("binary_expression", $.binary_expression)
                ),
            ),

        _try_operator: $ => choice("try", seq("try", "?"), seq("try", "!")),

        binary_expression: $ =>
            seq(
                field("left", $.expression),
                choice(
                    seq(
                        alias($.operator, $.binary_operator),
                        field("right", $.expression)
                    ),
                    seq(
                        "=",
                        optional($._try_operator),
                        field("right", $.expression)
                    ),
                    seq(
                        "?",
                        $.expression,
                        ":",
                        optional($._try_operator),
                        $.expression
                    ),
                    field("type_cast", $.type_casting_operator)
                )
            ),

        array_literal: $ => seq("[", field("elements", commaSep($.expression)), optional(","), "]"),

        dictionary_literal: $ =>
            choice(
                seq("[", field("elements", commaSep1($.dictionary_literal_item)), optional(","), "]"),
                seq("[", ":", "]")
            ),

        dictionary_literal_item: $ => seq(
                                          field("key", $.expression),
                                          ":",
                                          field("value", $.expression)
                                       ),


        tuple_expression: $ =>
            choice(
                seq("(", ")"),
                seq("(", field("elements", commaSep1($.tuple_element)), ")")
            ),

        tuple_element: $ =>
            choice(
                   field("expression", $.expression),
                   seq($.identifier, ":", field("expression", $.expression))
            ),

        _postfix_expression: $ =>
            choice(
                $._primary_expression,
                seq($._postfix_expression, alias($.operator, $.postfix_operator)),
                $.function_call_expression,
                $.initializer_expression,
                $.explicit_member_expression,
                $.postfix_self_expression,
                $.subscript_expression,
                $.forced_value_expression,
                $.optional_chaining_expression
            ),

        function_result: $ =>
            choice(
                seq("->", repeat($.attribute), $._type),
                seq("->", repeat($.attribute), $._type)
            ),

        //
        // Patterns
        //
        _pattern: $ =>
            choice(
                seq($.wildcard_pattern, optional($.type_annotation)),
                seq($.identifier_pattern, optional($.type_annotation)),
                $.value_binding_pattern,
                seq($.tuple_pattern, optional($.type_annotation)),
                $.enum_case_pattern,
                $.optional_pattern,
                $.type_casting_pattern,
                $.expression
            ),

        wildcard_pattern: $ => "_",

        identifier_pattern: $ => $.identifier,

        value_binding_pattern: $ =>
            choice(seq("var", $._pattern), seq("let", $._pattern)),

        tuple_pattern: $ =>
            seq("(", commaSep($.tuple_pattern_element), ")"),

        tuple_pattern_element: $ =>
            choice($._pattern, seq($.identifier, ":", $._pattern)),

        enum_case_pattern: $ =>
            seq(
                optional($.type_identifier),
                ".",
                alias($.identifier, $.enum_case_name),
                optional($.tuple_pattern)
            ),

        type_casting_pattern: $ => choice($.is_pattern, $.as_pattern),

        is_pattern: $ => seq("is", $._type),

        as_pattern: $ => seq($._pattern, "as", $._type),

        //
        // Declarations
        //
        _code_block: $ => choice(
                              seq("{", "}"),
                              field("statements", seq("{", $._statements, "}")),
                              field("statements", seq("{", $._statement, "}"))
                          ),

        constant_declaration: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "let",
                commaSep1(field("pattern_initializer", $.pattern_initializer))
            ),

        pattern_initializer: $ => seq($._pattern, field("value", optional($.initializer))),

        initializer: $ => seq("=", $.expression),

        variable_declaration: $ =>
            choice(
                seq(
                    $.variable_declaration_head,
                    commaSep1(field("pattern_initializer", $.pattern_initializer))
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $._code_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $.getter_setter_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $.getter_setter_keyword_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.initializer,
                    $.willSet_didSet_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    optional($.initializer),
                    $.willSet_didSet_block
                )
            ),

        variable_declaration_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "var"
            ),

        function_declaration: $ =>
            seq(
                $.function_head,
                field("name", $.function_name),
                optional($.generic_parameter_clause),
                $._function_signature,
                optional($.generic_where_clause),
                $._code_block
            ),

        function_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "func"
            ),

        function_name: $ => choice($.identifier, $.operator),

        _function_signature: $ =>
            choice(
                seq(
                    $._parameter_clause,
                    optional("throws"),
                    optional($.function_result)
                ),
                seq($._parameter_clause, "rethrows", optional($.function_result))
            ),

        _declaration_modifier: $ =>
            choice(
                "class",
                "convenience",
                "dynamic",
                "final",
                "infix",
                "lazy",
                "optional",
                "override",
                "postfix",
                "prefix",
                "required",
                "static",
                "unowned",
                seq("unowned", "(", "safe", ")"),
                seq("unowned", "(", "unsafe", ")"),
                "weak",
                $._access_level_modifier,
                $._mutation_modifier
            ),

        boolean_literal: $ => choice("true", "false"),

        string_literal: $ => {
            const double_quote_string = seq('"', double_quote_chars(), '"')
            return token(double_quote_string)
        },

        _type: $ =>
            choice(
                $.function_type,
                $.array_type,
                $.dictionary_type,
                $.type_identifier,
                $.tuple_type,
                $.optional_type,
                $.implicitly_unwrapped_optional_type,
                $.protocol_composition_type,
                $.opaque_type,
                $.metatype_type,
                $.any_type,
                $.self_type,
                seq("(", $._type, ")")
            ),

        type_annotation: $ =>
            seq(":", repeat($.attribute), optional("inout"), $._type),

        type_identifier: $ =>
            choice(
                seq(field("identifier", $.identifier), optional($.generic_argument_clause)),
                seq(
                    $.identifier,
                    optional($.generic_argument_clause),
                    ".",
                    $.type_identifier
                )
            ),

        tuple_type: $ =>
            seq(
                "(",
                commaSep($.tuple_type_element),
                ")"
            ),

        tuple_type_element: $ =>
            choice(seq($.identifier, $.type_annotation), $._type),

        array_type: $ => seq("[", $._type, "]"),

        dictionary_type: $ => seq("[", $._type, ":", $._type, "]"),

        optional_type: $ => prec(PREC.OPTIONAL_TYPE, seq($._type, "?")),

        any_type: $ => "Any",

        generic_argument_clause: $ => seq("<", commaSep1($.generic_argument), ">"),

        generic_argument: $ => $._type,
